--- a/style.css
+++ b/style.css
@@ -173,3 +173,83 @@ nav{
     margin-left: 2.5rem;
     margin-top:0.25rem;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+.form-section {
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem;
+  flex:1;
+  max-width: fit-content;
+}
+.form-title {
+  font-size: 1.75rem;
+  margin-bottom: 2rem;
+  color: #1f1f1f;
+}
+.form-group label {
+  display: flex;
+  margin-bottom: 0.4rem;
+  font-weight: 500;
+  font-size: 0.95rem;
+}
+.form-group input {
+  width: 100%;
+  padding: 0.75rem;
+  border: 1.5px solid #ccc;
+  border-radius: 6px;
+  font-size: 1rem;
+}
+.for-login-link {
+  font-size: 0.875rem;
+  text-align: center;
+  margin-bottom: 1rem;
+}
+.divider {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 1.5rem 0;
+  font-size: 0.85rem;
+  color: #777;
+}
+.divider::before,
+.divider::after {
+  content: "";
+  flex: 1;
+  height: 1px;
+  background: #ddd;
+}
+.social-buttons {
+  display: flex;
+  gap: 0.5rem;
+  flex-wrap: wrap;
+  width:100%;
+}
+#microsoft:hover{
+  border-color: #1d4ed8;
+  color:#1d4ed8;
+}
+#google:hover{
+  border-color: red;
+  color:red;
+
+}
+.social-btn{
+    border: 1.5px solid #ccc;
+    padding: 0.5rem;
+    border-radius: 6px;
+    font-size: 0.9rem;
+}
