--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
     margin:0;
 
 }
+
 .line-clamp-3{
     overflow: hidden;
     display: -webkit-box;
@@ -35,12 +36,30 @@ body{
     
     background-color: white;
     box-shadow: var(--box-shadow);
+    padding:0rem !important
 }
 .logo{
     color:var(--primary);
 }
 .logo:hover{
     color:black;
+}
+section{
+    padding: 1rem 0;
+}
+.scroll-progress{
+    height: 100%;
+    background: var(--primary);
+    width: 0%;
+    transition: width 0.3s ease;
+}
+.scroll-indicator {
+    position: fixed;
+    top: 65px;
+    left: 0;
+    width: 100%;
+    height: 3px;
+    z-index: 999;
 }
 nav{
     display:flex;
@@ -59,10 +78,26 @@ nav{
 .nav-list li{
     font-size:1.125rem;
     font-weight: 500;
+    transition: color 0.3s ease;
 }
 .nav-list li:hover{
     color:var(--primary);
-
+    position:relative;
+    transform: translateY(4px)
+}
+.nav-list li::after{
+    content:"";
+    position:absolute;
+    bottom:-5px;
+    left:0px;
+    width:0;
+    height:2px;
+    background-color: var(--primary);
+    transition:width 0.3s ease;
+    
+}
+.nav-list li:hover::after{
+    width:100%;
 }
 .btn{
     background: var(--primary);
@@ -94,9 +129,8 @@ nav{
     border-color:var(--btn-col);
 }
 
-.list-post,.top-post{
-    padding: 2.5rem 0;
-}
+
+
 .blog-tag {
     display: inline-block;
     margin: 5px 5px 10px 0;
@@ -115,13 +149,34 @@ nav{
     color: #80002a;
     box-shadow: var(--box-shadow);
 }
+.img_cont{
+    border-radius:5px;
+    width: 300px ;
+    height: 205px; ;
+    flex-shrink:0;
+}
 .post-img{
     width:250px;
     object-fit: cover;
     border-radius:5px;
+    transition: all 0.3s ease;
+}
+.img-container{
+    perspective: 850px;
+    border-radius:5px;
+}
+.post-img:hover{
+    transform : scale(1.05);
+}
+.img-rot{
+    transition: all 0.3s ease-in-out;
+}
+.img-rot:hover{
+    transform : scale(1.05) rotate(1deg);
+    filter: brightness(0.5);
 }
 .card{
-    height: 203px;
+    height: 210x;
 }
 .sidebar{
     background:#ffffff;
@@ -166,11 +221,11 @@ nav{
     flex:1;
     gap:2rem;
 }
-.title:hover{
+.title{
     margin-bottom: 2rem;
+}
+.title:hover{
     color:var(--primary);
-    text-decoration: underline var(--primary);
-
 }
 .card-container{
     display:flex;
@@ -180,15 +235,6 @@ nav{
 .comment{
     margin-top:0.25rem;
 }
-
-
-
-
-
-
-
-
-
 
 .form-title {
   font-size: 1.75rem;
